--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dev_dependencies:
   provider: ^6.0.3
   cloud_firestore: ^3.4.4
   google_fonts: ^3.0.1
+  path: ^1.8.0
+  image_picker: ^0.8.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
